kubernetes/apps/observability/smartctl-exporter/app/networkpolicy.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/networking.k8s.io/networkpolicy_v1.json
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: smartctl-exporter
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: smartctl-exporter
      app.kubernetes.io/name: prometheus-smartctl-exporter
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: prometheus
      ports:
        - port: 9633
          protocol: TCP
